refactor: update type annotations and improve variable declarations in Menu and Sidebar components; enhance Thai translations

--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -682,7 +682,7 @@
 	"Leave empty to use the default prompt, or enter a custom prompt": "",
 	"Leave model field empty to use the default model.": "",
 	"License": "",
-	"Light": "แสง",
+	"Light": "สว่าง",
 	"Listening...": "กำลังฟัง...",
 	"Llama.cpp": "",
 	"LLMs can make mistakes. Verify important information.": "LLMs สามารถทำผิดพลาดได้ ตรวจสอบข้อมูลสำคัญ",
@@ -794,7 +794,7 @@
 	"October": "ตุลาคม",
 	"Off": "ปิด",
 	"Okay, Let's Go!": "ตกลง ไปกัน!",
-	"OLED Dark": "OLED โหมดมื",
+	"OLED Dark": "มืด (OLED)",
 	"Ollama": "Ollama",
 	"Ollama API": "Ollama API",
 	"Ollama API settings updated": "",
